# chronsync

./: Cargo.toml  README.md  config.json
src/: cli.rs  commands.rs  config.rs  main.rs  scheduler.rs  utils.rs
tests/: cli_test.rs
