[package]
name = "chronsync"
version = "0.1.4"
edition = "2021"
authors = ["t.kawase398@gmail.com"]
license = "MIT"
description = "Lightweight, real-time reloading cron-like task scheduler daemon"
repository = "https://github.com/coil398/chronsync"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
cron = "0.15.0"
directories = "6.0.0"
log = "0.4.29"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
simple_logger = "5.1.0"
tokio = { version = "1.48.0", features = ["full"] }
